# efficent-agent-router-ear

./: .env.example  .gitattributes  .gitignore  001_env.sh  003_setup.bat  003_setup.sh  COPILOT_PROMPTS.md  README.md  env.sample  pyproject.toml  release.py  run_demo_walkthrough.bat  run_demo_walkthrough.sh  run_live_webapp.bat  run_live_webapp.sh  run_pip_audit.bat  run_pip_audit.sh  run_security_audits.bat  run_security_audits.sh  run_tests.bat  run_tests.sh  run_trivy.bat  run_trivy.sh
.github/: copilot-instructions.md
.github/instructions/: python-router.instructions.md
.github/prompts/: breakdown-user-story.prompt.md  draft-routing-rule.prompt.md
.github/workflows/: ci.yml  pip-audit.yml  publish-pypi.yml  publish-testpypi.yml  release-preflight.yml  trivy.yml
docs/: execution_plan.md  llm_explorer.html  project-history.md  release-playbook.md  system_prompt.md  usage-guide.md  wbs.md
docs/adr/: 0001-core-architecture-and-delivery-sequence.md
docs/releases/: v0.10.0-release-notes-draft.md  v0.10.1-release-notes-draft.md
src/ear/: __init__.py  cli.py  config.py  demo_backend.py  demo_server.py  evaluation.py  executor.py  fallback.py  guardrails.py  intent.py  (+7 more)
tests/: __init__.py  conftest.py  test_cli.py  test_config.py  test_demo_backend.py  test_demo_server.py  test_evaluation.py  test_executor.py  test_fallback.py  test_guardrails.py  test_intent.py  test_judge.py  test_mcp_server.py  test_metrics.py  test_models.py  test_orchestrator.py  test_registry.py  test_router_engine.py
webapp/: index.html  package-lock.json  package.json  vite.config.js
(+3 files in other folders)
