[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ear-shankonduru"
version = "0.3.0"
description = "Efficient Agent Router — routes tasks to the best LLM under quality, latency, cost, and safety constraints"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27.0",
    "typer>=0.12.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "bandit[toml]>=1.7.9",
    "pip-audit>=2.7.0",
]

[project.scripts]
ear = "ear.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--cov=ear --cov-branch --cov-report=term-missing"

[tool.coverage.run]
source = ["ear"]
branch = true
omit = ["src/ear/mcp_server.py"]
disable_warnings = ["module-not-measured"]

[tool.coverage.report]
show_missing = true

[tool.bandit]
exclude_dirs = ["tests", ".venv", "build", "dist"]
skips = []
